--- a/src/app/modules/shared/person/components/person-create/person-create.component.html
+++ b/src/app/modules/shared/person/components/person-create/person-create.component.html
@@ -48,6 +48,8 @@
       </div>
     </div>
 
+    {{ createForm.value | json }}
+
     <div class="mb-3 grid grid-cols-2 gap-4">
       <div class="col-span-2 sm:col-span-1">
         <label for="category2" class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
@@ -68,182 +70,186 @@
       </div>
     </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label for="category1" class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Tipo de Persona <b class="text-red-600">*</b>
-        </label>
-        <select
-          formControlName="type"
-          class="focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
-          <option value="NATURAL">NATURAL</option>
-          <option value="JURIDICA">JURIDICA</option>
-        </select>
-        <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-          {{ createForm.getError('type') }}
-        </p>
+    <div *ngIf="checkSearch()">
+      <div class="mb-3 grid grid-cols-1 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <label for="category1" class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+            Tipo de Persona <b class="text-red-600">*</b>
+          </label>
+          <select
+            formControlName="type"
+            class="focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
+            <option value="NATURAL">NATURAL</option>
+            <option value="JURIDICA">JURIDICA</option>
+          </select>
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4" *ngIf="createForm.value.type == 'NATURAL'">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">RUC</label>
-        <input
-          type="text"
-          formControlName="ruc"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+      <div class="mb-3 grid grid-cols-1 gap-4" *ngIf="createForm.value.type == 'NATURAL'">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">RUC</label>
+          <input
+            readonly
+            type="text"
+            formControlName="ruc"
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4" *ngIf="createForm.value.type == 'JURIDICA'">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Razon Social <b class="text-red-600">*</b>
-        </label>
-        <input
-          formControlName="nombreRazonSocial"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+      <div class="mb-3 grid grid-cols-1 gap-4" *ngIf="createForm.value.type == 'JURIDICA' || validateType == 'RUC'">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+            Razon Social <b class="text-red-600">*</b>
+          </label>
+          <input
+            formControlName="nombreRazonSocial"
+            type="text"
+            readonly
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4" *ngIf="createForm.value.type == 'NATURAL'">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Nombres <b class="text-red-600">*</b>
-        </label>
-        <input
-          formControlName="names"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+      <div class="mb-3 grid grid-cols-1 gap-4" *ngIf="validateType == 'DNI' && createForm.value.type == 'NATURAL'">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+            Nombres <b class="text-red-600">*</b>
+          </label>
+          <input
+            formControlName="names"
+            type="text"
+            readonly
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-2 gap-4" *ngIf="createForm.value.type == 'NATURAL'">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Apellido Paterno <b class="text-red-600">*</b>
-        </label>
-        <input
-          formControlName="lastName"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+      <div class="mb-3 grid grid-cols-2 gap-4" *ngIf="validateType == 'DNI' && createForm.value.type == 'NATURAL'">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+            Apellido Paterno <b class="text-red-600">*</b>
+          </label>
+          <input
+            formControlName="lastName"
+            type="text"
+            readonly
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        </div>
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+            Apellido Materno <b class="text-red-600">*</b>
+          </label>
+          <input
+            formControlName="secondaryName"
+            type="text"
+            readonly
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        </div>
       </div>
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Apellido Materno <b class="text-red-600">*</b>
-        </label>
-        <input
-          formControlName="secondaryName"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
-      </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Departamento <b class="text-red-600">*</b>
-        </label>
-        <app-departamento-select
-          [value]="createForm.value.departamentoId"
-          (eventChange)="selectDepartamentoId($event)" />
+      <div class="mb-3 grid grid-cols-1 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+            Departamento <b class="text-red-600">*</b>
+          </label>
+          <app-departamento-select
+            [value]="createForm.value.departamentoId"
+            (eventChange)="selectDepartamentoId($event)" />
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-2 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Provincia <b class="text-red-600">*</b>
-        </label>
-        <app-provincia-select
-          [value]="createForm.value.provinciaId"
-          [departamentoId]="createForm.value.departamentoId"
-          (eventChange)="selectProvinciaId($event)" />
+      <div class="mb-3 grid grid-cols-2 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+            Provincia <b class="text-red-600">*</b>
+          </label>
+          <app-provincia-select
+            [value]="createForm.value.provinciaId"
+            [departamentoId]="createForm.value.departamentoId"
+            (eventChange)="selectProvinciaId($event)" />
+        </div>
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+            Distrito <b class="text-red-600">*</b>
+          </label>
+          <app-distrito-select
+            [value]="createForm.value.distritoId"
+            [departamentoId]="createForm.value.departamentoId"
+            [provinciaId]="createForm.value.provinciaId"
+            (eventChange)="selectDistritoId($event)" />
+        </div>
       </div>
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Distrito <b class="text-red-600">*</b>
-        </label>
-        <app-distrito-select
-          [value]="createForm.value.distritoId"
-          [departamentoId]="createForm.value.departamentoId"
-          [provinciaId]="createForm.value.provinciaId"
-          (eventChange)="selectDistritoId($event)" />
-      </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Centro Poblado</label>
-        <app-poblado-select
-          [value]="createForm.value.centroPobladoId"
-          [departamentoId]="createForm.value.departamentoId"
-          [provinciaId]="createForm.value.provinciaId"
-          [distritoId]="createForm.value.distritoId"
-          (eventChange)="selectPobladoId($event)" />
+      <div class="mb-3 grid grid-cols-1 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Centro Poblado</label>
+          <app-poblado-select
+            [value]="createForm.value.centroPobladoId"
+            [departamentoId]="createForm.value.departamentoId"
+            [provinciaId]="createForm.value.provinciaId"
+            [distritoId]="createForm.value.distritoId"
+            (eventChange)="selectPobladoId($event)" />
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Dirección</label>
-        <textarea
-          formControlName="address"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
-        </textarea>
+      <div class="mb-3 grid grid-cols-1 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Dirección</label>
+          <textarea
+            formControlName="address"
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
+          </textarea>
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Referencia</label>
-        <textarea
-          formControlName="referen"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
-        </textarea>
+      <div class="mb-3 grid grid-cols-1 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">Referencia</label>
+          <textarea
+            formControlName="referen"
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
+          </textarea>
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-1 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"> Correo Electrónico </label>
-        <input
-          formControlName="email"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+      <div class="mb-3 grid grid-cols-1 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"> Correo Electrónico </label>
+          <input
+            formControlName="email"
+            type="text"
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        </div>
       </div>
-    </div>
 
-    <div class="mb-3 grid grid-cols-2 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"> Télefono </label>
-        <input
-          formControlName="phone"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+      <div class="mb-3 grid grid-cols-2 gap-4">
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"> Télefono </label>
+          <input
+            formControlName="phone"
+            type="text"
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        </div>
+        <div class="col-span-2 sm:col-span-1">
+          <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"> Celular </label>
+          <input
+            formControlName="cellphone"
+            type="text"
+            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+        </div>
       </div>
-      <div class="col-span-2 sm:col-span-1">
-        <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white"> Celular </label>
-        <input
-          formControlName="cellphone"
-          type="text"
-          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
-      </div>
-    </div>
 
-    <div class="text-right">
-      <ng-container *ngIf="this.service.getLoading(); else btnLoadingElse">
-        <app-button-loading title="Guardando..." />
-      </ng-container>
-      <ng-template #btnLoadingElse>
-        <button
-          [disabled]="!createForm.valid"
-          type="submit"
-          class="rounded-lg bg-primary px-5 py-3 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4">
-          Guardar
-        </button>
-      </ng-template>
+      <div class="text-right">
+        <ng-container *ngIf="this.service.getLoading(); else btnLoadingElse">
+          <app-button-loading title="Guardando..." />
+        </ng-container>
+        <ng-template #btnLoadingElse>
+          <button
+            [disabled]="!createForm.valid"
+            type="submit"
+            class="rounded-lg bg-primary px-5 py-3 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4">
+            Guardar
+          </button>
+        </ng-template>
+      </div>
     </div>
   </form>
 </app-modal>
